# wohniq

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  TASKS.md
backend/: Dockerfile  alembic.ini  pyproject.toml  railway.toml
backend/app/: __init__.py  main.py
backend/app/routers/: __init__.py  search.py
backend/core/: __init__.py  config.py  db.py  embeddings.py  llm.py  logging.py
backend/data/: __init__.py  embed_listings.py  embed_text.py  enrich_neighborhoods.py  imaging.py  kieze.py  models.py  pexels.py  photo_assign.py  seed_images.py  seed_listings.py  synthetic.py
backend/data/migrations/: README.md  env.py
backend/data/migrations/versions/: 0001_initial_schema.py  0002_neighborhood_pois.py
backend/enrich/: __init__.py  commute.py  commute_parse.py  neighborhood.py  neighborhood_parse.py
backend/evals/: __init__.py  metrics.py  parser_cases.py  parser_eval.py  ranking_cases.py  ranking_eval.py  scam_eval.py  scoring.py
backend/scam/: __init__.py  detector.py  fusion.py  photo_dups.py  score.py  signals.py  text_signals.py
backend/search/: __init__.py  criteria.py  explain_rules.py  explanation.py  filters.py  parse_rules.py  parser.py  ranking.py  retrieval.py
backend/tests/: test_commute_parse.py  test_compare_api.py  test_detector.py  test_embed_text.py  test_explain_rules.py  test_explanation.py  test_filters.py  test_fusion.py  test_health.py  test_llm.py  test_metrics.py  test_neighborhood_parse.py  test_parse_rules.py  test_parser.py  test_photo_assign.py  test_photo_dups.py  test_ranking.py  test_ranking_eval.py  test_retrieval.py  test_scam_signals.py  test_scam_text.py  test_scoring.py  test_search_api.py  test_synthetic.py
docs/: SPEC.md  system_prompts.md
docs/adr/: 0001-deterministic-ranking.md  0002-hybrid-scam-detection.md  0003-synthetic-data-and-images.md  0004-gemini-structured-output.md  README.md  (+3 more)
frontend/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
(+12 files in other folders)
