[project]
name = "wohniq-backend"
version = "0.1.0"
description = "WohnIQ backend — AI-assisted Berlin apartment search API"
requires-python = ">=3.11"

# Runtime dependencies. Kept lean; modules add their own as we build them.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",            # transit/Overpass/Pexels clients + TestClient
    "google-genai>=0.3",      # Gemini SDK (LLM + embeddings)
    "numpy>=1.26",            # ranking + scam math
    "pandas>=2.2",            # data generation / analysis
    "pillow>=10.0",           # image handling
    "imagehash>=4.3",         # pHash duplicate detection (scam showpiece)
    "psycopg[binary]>=3.1",   # Postgres / Supabase driver
    "sqlalchemy>=2.0",        # ORM models (ADR-0006)
    "alembic>=1.13",          # migrations (ADR-0006)
    "pgvector>=0.3",          # pgvector SQLAlchemy types
]

# Dev tooling lives in a PEP 735 dependency group. `uv sync` installs the
# `dev` group by default, so `make install` gives you pytest/ruff/black with
# no extra flags.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Treat each top-level folder as an importable package.
packages = ["app", "core", "search", "scam", "enrich", "data", "evals"]

# --- Tooling config (single source of truth) ---

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, UP = pyupgrade, B = bugbear
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]          # so tests can `from app.main import app`
testpaths = ["tests"]
addopts = "-q"
